creacion header y footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     </head>
 
     <body>
-        <h1>Hola</h1>
+<main>
+    <header class="navegador">
+        <!--Hacer logo-->
+        <!--Formulario-->
+        <nav>
+        <a href="./index.html">Home</a>
+        <a href="./favorite.html">Favoritos</a>
+        <a href="./genre.html">Generos</a>
+        <a href="./search-result.html">Resultado de busqueda</a>
+        <a href="./detail-genre.html">Detalles de genero</a>
+        <a href="./detail-movie.html">Detalles pelicula</a>
+        <a href="./detail-serie.html">Detalles serie</a>
+
+        </nav>
+    </header>
+    <footer>
+        <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
+    </footer>
+</main>
     </body>
 
 </html>
