addicion de estructura

--- a/index.html
+++ b/index.html
@@ -23,6 +23,89 @@
 
         </nav>
     </header>
+    <section> 
+        <h2> Romance </h2>
+        <article> 
+            <h3>Películas populares </h3>
+        <!--Elegir pelicula-->
+    </article>
+       <h3> Series populares </h3> 
+               <!--Elegir pelicula-->
+        <article>
+            <article> 
+                <h3> Lo más visto en series</h3>> 
+                        <!--Elegir pelicula-->
+            </article>
+        <article>  
+            <h3> Lo más visto en películas</h3>
+                    <!--Elegir pelicula-->
+        </article>  
+        <article>
+            <h3> Películas más valoradas</h3>
+                    <!--Elegir pelicula-->
+        </article>
+        <article> 
+            <h3> Series más valoradas </h3>
+                    <!--Elegir pelicula-->
+        </article>
+        </section>
+
+    <section> 
+        <h2> Para ver en familia </h2>
+        <article> 
+            <h3>Películas populares </h3>
+                    <!--Elegir pelicula-->
+        </article>
+       <h3> Series populares </h3> 
+               <!--Elegir pelicula-->
+        <article>
+            <article> 
+                <h3> Lo más visto en series</h3> 
+                        <!--Elegir pelicula-->
+            </article>
+        <article>  
+            <h3> Lo más visto en películas</h3> 
+                    <!--Elegir pelicula-->
+        </article>  
+        <article>
+            <h3> Películas más valoradas</h3>
+                    <!--Elegir pelicula-->
+        </article>
+        <article> 
+            <h3> Series más valoradas </h3>
+                    <!--Elegir pelicula-->
+        </article>
+        </section>
+    </section>
+
+    <section> 
+        <h2> Acción - Thriller </h2>
+        <article> 
+            <h3>Películas populares </h3>
+                    <!--Elegir pelicula-->
+        </article>
+       <h3> Series populares </h3> 
+               <!--Elegir pelicula-->
+        <article>
+            <article> 
+                <h3> Lo más visto en series</h3>
+                        <!--Elegir pelicula-->
+            </article>
+        <article>  
+            <h3> Lo más visto en películas</h3>
+                    <!--Elegir pelicula-->
+        </article>  
+        <article>
+            <h3> Películas más valoradas</h3>
+                    <!--Elegir pelicula-->
+        </article>
+        <article> 
+            <h3> Series más valoradas </h3>
+                    <!--Elegir pelicula-->
+        </article>
+        </section>
+    </section>
+
     <footer>
         <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
     </footer>
