--- a/index.html
+++ b/index.html
@@ -25,85 +25,82 @@
     </header>
     <section> 
         <h2> Romance </h2>
-        <article> 
-            <h3>Películas populares </h3>
+    <article> 
+        <h3>Películas populares </h3>
         <!--Elegir pelicula-->
     </article>
+    <article>
        <h3> Series populares </h3> 
-               <!--Elegir pelicula-->
-        <article>
-            <article> 
-                <h3> Lo más visto en series</h3>> 
-                        <!--Elegir pelicula-->
-            </article>
-        <article>  
-            <h3> Lo más visto en películas</h3>
-                    <!--Elegir pelicula-->
-        </article>  
-        <article>
-            <h3> Películas más valoradas</h3>
-                    <!--Elegir pelicula-->
-        </article>
-        <article> 
-            <h3> Series más valoradas </h3>
-                    <!--Elegir pelicula-->
-        </article>
-        </section>
-
+        <!--Elegir serie-->
+    </article>
+        <h3> Lo más visto en series</h3>> 
+        <!--Elegir serie-->
+    <article>
+        <h3> Lo más visto en películas</h3>
+        <!--Elegir pelicula-->
+    </article>
+    <article>  
+        <h3> Películas más valoradas</h3>
+        <!--Elegir pelicula-->
+    </article>  
+    <article>
+        <h3> Series más valoradas </h3>
+        <!--Elegir pelicula-->
+    </article>
+    </section>
     <section> 
         <h2> Para ver en familia </h2>
         <article> 
             <h3>Películas populares </h3>
-                    <!--Elegir pelicula-->
+            <!--Elegir pelicula-->
         </article>
-       <h3> Series populares </h3> 
-               <!--Elegir pelicula-->
         <article>
-            <article> 
-                <h3> Lo más visto en series</h3> 
-                        <!--Elegir pelicula-->
-            </article>
+            <h3>Series populares </h3> 
+            <!--Elegir serie-->
+        </article>
+        <article>
+            <h3> Lo más visto en series</h3>> 
+            <!--Elegir serie-->
+        </article>
+        <article>
+            <h3> Lo más visto en películas</h3>
+            <!--Elegir pelicula-->
+        </article>
         <article>  
-            <h3> Lo más visto en películas</h3> 
-                    <!--Elegir pelicula-->
+            <h3> Películas más valoradas</h3>
+            <!--Elegir pelicula-->
         </article>  
         <article>
-            <h3> Películas más valoradas</h3>
-                    <!--Elegir pelicula-->
-        </article>
-        <article> 
             <h3> Series más valoradas </h3>
-                    <!--Elegir pelicula-->
+            <!--Elegir pelicula-->
         </article>
-        </section>
     </section>
-
     <section> 
-        <h2> Acción - Thriller </h2>
+        <h2> Acción - Thriller </h2> 
         <article> 
             <h3>Películas populares </h3>
-                    <!--Elegir pelicula-->
+            <!--Elegir pelicula-->
         </article>
-       <h3> Series populares </h3> 
-               <!--Elegir pelicula-->
         <article>
-            <article> 
-                <h3> Lo más visto en series</h3>
-                        <!--Elegir pelicula-->
-            </article>
-        <article>  
+            <h3>Series populares </h3> 
+            <!--Elegir serie-->
+        </article>
+        <article>
+            <h3> Lo más visto en series</h3>> 
+            <!--Elegir serie-->
+        </article>
+        <article>
             <h3> Lo más visto en películas</h3>
-                    <!--Elegir pelicula-->
+            <!--Elegir pelicula-->
+        </article>
+        <article>  
+            <h3> Películas más valoradas</h3>
+            <!--Elegir pelicula-->
         </article>  
         <article>
-            <h3> Películas más valoradas</h3>
-                    <!--Elegir pelicula-->
-        </article>
-        <article> 
             <h3> Series más valoradas </h3>
-                    <!--Elegir pelicula-->
+            <!--Elegir pelicula-->
         </article>
-        </section>
     </section>
 
     <footer>
