--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </article>  
         <article>
             <h3> Series más valoradas </h3>
-            <!--Elegir pelicula-->
+            <!--Elegir serie-->
         </article>
     </section>
 
