--- a/index.html
+++ b/index.html
@@ -5,46 +5,72 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="./CSS/styles.css">
         <title>Home</title>
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">    </head>
 
     <body>
 <main>
-    <header class="navegador">
-        <!--Hacer logo-->
-        <!--Formulario-->
+ <!--   <header>
+        Hacer logo
+        Formulario
+        
         <nav>
-        <a href="./index.html">Home</a>
-        <a href="./favorite.html">Favoritos</a>
-        <a href="./genre.html">Generos</a>
-        <a href="./search-result.html">Resultado de busqueda</a>
-        <a href="./detail-genre.html">Detalles de genero</a>
-        <a href="./detail-movie.html">Detalles pelicula</a>
-        <a href="./detail-serie.html">Detalles serie</a>
+        <a class="navegador" href="./index.html">Home</a>
+        <a class="navegador" href="./favorite.html">Favoritos</a>
+        <a class="navegador" href="./genre.html">Generos</a>
+        <a class="navegador" href="./search-result.html">Resultado de busqueda</a>
+        <a class="navegador" href="./detail-genre.html">Detalles de genero</a>
+        <a class="navegador" href="./detail-movie.html">Detalles pelicula</a>
+        <a class="navegador" href="./detail-serie.html">Detalles serie</a>
 
         </nav>
+    </header>-->
+
+    <header>
+        <nav>
+            <table class="tabla1">
+                <tr>
+                    <td width="34%"><h1>  SPOTIFY</h1></td>
+                    <td width="22%">
+                        <a href="./index.html">Playlists</a>
+                    </td>
+
+                    <td width="22%"><a href="./liked.html">Liked Songs</a></td>
+
+                    <td width="22%"><a href="./downloaded.html">Podcasts</a></td>
+                </tr>
+            </table>
+        </nav>
     </header>
-    <section> 
+
+    <section > 
         <h2> Romance </h2>
     <article> 
         <h3>Películas populares </h3>
+        <div class ="portada"> </div>
         <!--Elegir pelicula-->
     </article>
     <article>
        <h3> Series populares </h3> 
-        <!--Elegir serie-->
+       <div class ="portada"> </div>
+       <!--Elegir serie-->
     </article>
-        <h3> Lo más visto en series</h3>> 
+        <h3> Lo más visto en series</h3> 
+        <div class ="portada"> </div>
         <!--Elegir serie-->
     <article>
         <h3> Lo más visto en películas</h3>
+        <div class ="portada"> </div>
         <!--Elegir pelicula-->
     </article>
     <article>  
         <h3> Películas más valoradas</h3>
+        <div class ="portada"> </div>
         <!--Elegir pelicula-->
     </article>  
     <article>
         <h3> Series más valoradas </h3>
+        <div class ="portada"> </div>
         <!--Elegir pelicula-->
     </article>
     </section>
@@ -52,26 +78,32 @@
         <h2> Para ver en familia </h2>
         <article> 
             <h3>Películas populares </h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>
         <article>
-            <h3>Series populares </h3> 
+            <h3>Series populares </h3>
+            <div class ="portada"> </div>
             <!--Elegir serie-->
         </article>
         <article>
-            <h3> Lo más visto en series</h3>> 
+            <h3> Lo más visto en series</h3>
+            <div class ="portada"> </div>
             <!--Elegir serie-->
         </article>
         <article>
             <h3> Lo más visto en películas</h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>
         <article>  
             <h3> Películas más valoradas</h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>  
         <article>
             <h3> Series más valoradas </h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>
     </section>
@@ -79,26 +111,32 @@
         <h2> Acción - Thriller </h2> 
         <article> 
             <h3>Películas populares </h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>
         <article>
             <h3>Series populares </h3> 
+            <div class ="portada"> </div>
             <!--Elegir serie-->
         </article>
         <article>
-            <h3> Lo más visto en series</h3>> 
+            <h3> Lo más visto en series</h3>
+            <div class ="portada"> </div>
             <!--Elegir serie-->
         </article>
         <article>
             <h3> Lo más visto en películas</h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>
         <article>  
             <h3> Películas más valoradas</h3>
+            <div class ="portada"> </div>
             <!--Elegir pelicula-->
         </article>  
         <article>
             <h3> Series más valoradas </h3>
+            <div class ="portada"> </div>
             <!--Elegir serie-->
         </article>
     </section>
