copy paste del header en todas las paginas para poder navegar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav class="menu">
-                <h1 class="cinepedia" href="./index.html">CINEPEDIA</h1>
+                <a href="./index.html" CLASS="cinepedia"><h1>CINEPEDIA</h1></a>
                 <a class="navegador" href="./favorite.html">Favoritos</a>
                 <a class="navegador" href="./genre.html">Generos</a>
                 <a class="navegador" href="./search-result.html">Resultado de busqueda</a>
