agregado de carpetas con fotos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <article> 
                     <h3>Películas populares</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
+                        <img>
                     </div>
 
                 </article>
