--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <article> 
                     <h3>Películas populares</h3>
                     <div class ="portada">
-                        <img>
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/diario de una pasion.jpg" alt="Diario de una pasión">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/midnight in paris.jpg" alt="Midnight in Paris">
                     </div>
 
                 </article>
@@ -38,35 +40,45 @@
                 <article>
                     <h3>Series populares</h3> 
                     <div class ="portada">
-                        <!--Elegir serie-->
+                        <img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/OIP (9).jpeg" alt="Bridgertone">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="Outlander">
                     </div>
                 </article>
                 
                 <article>
                     <h3> Lo más visto en series</h3>
                     <div class ="portada">
-                        <!--Elegir serie-->
+                        <img class="fotos" src="./img/ROMANCE/SERIES/R (2).jpeg" alt="Gilmore girls">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/R (3).jpeg" alt="The OC">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/the summer i t.jpg" alt="The summer i turned pretty">
                     </div>
                 </article>
 
                 <article>
                     <h3> Lo más visto en películas</h3>
                     <div class ="portada"> 
-                        <!--Elegir pelicula-->
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg" alt="Orgullo y prejuicio">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/perfect match.jpg" alt="Perfect match">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/set it up.jpg" alt="Set it up">
                     </div>
                 </article>
 
                 <article>  
                     <h3> Películas más valoradas</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/scenes from a marriage.jpg" alt="Scenes from a marriage">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (12).jpeg" alt="Fifty shades of gray">
+                        <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (8).jpeg" alt="Happy ending">
                     </div>
                 </article>  
 
                 <article>
                     <h3> Series más valoradas </h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
+                        <img class="fotos" src="./img/ROMANCE/SERIES/vamp diaries.jpg" alt="Vampire diaries">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/normal people.jpg" alt="Normal people">
+                        <img class="fotos" src="./img/ROMANCE/SERIES/jane the virgin.jpg" alt="jane the virgin">
                     </div>
                 </article>
             </section>
