--- a/index.html
+++ b/index.html
@@ -89,44 +89,55 @@
                 <article> 
                     <h3>Películas populares</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/cars.jpg" alt="Cars">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (13).jpeg" alt="Dog's purpose">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/R (4).jpeg" alt="Inside out">
                     </div>
-
                 </article>
 
                 <article>
                     <h3>Series populares</h3> 
                     <div class ="portada">
-                        <!--Elegir serie-->
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (15).jpeg" alt="This is us">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="Morder Family">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg" alt="Los Simpsons">
                     </div>
                 </article>
                 
                 <article>
                     <h3> Lo más visto en series</h3>
                     <div class ="portada">
-                        <!--Elegir serie-->
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (14).jpeg" alt="The office">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (23).jpeg" alt="Friends">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (18).jpeg" alt="Fuller House">
                     </div>
                 </article>
 
                 <article>
                     <h3> Lo más visto en películas</h3>
                     <div class ="portada"> 
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (19).jpeg" alt="Spider Man">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (22).jpeg" alt="MonteCarlo">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/R (6).jpeg" alt="Monster Inc">
+                                       </div>
                 </article>
 
                 <article>  
                     <h3> Películas más valoradas</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/dorado.jpg" alt="Dorado">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (16).jpeg" alt="George">
+                        <img class="fotos" src="./img/FAMILIA/PELICULAS/tangled.jpg" alt="Tangled">
+                                       </div>
                 </article>  
 
                 <article>
                     <h3> Series más valoradas </h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (17).jpeg" alt="Unfortunate Events">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (21).jpeg" alt="Gilmore Girls">
+                        <img class="fotos" src="./img/FAMILIA/SERIES/OIP (20).jpeg" alt="Anne with an E">
+                                       </div>
                 </article>
             </section>
 
@@ -136,7 +147,10 @@
                 <article> 
                     <h3>Películas populares</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
+                        <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/dune.jpg" alt="Dune">
+
                     </div>
 
                 </article>
