--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
                         <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
                         <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
                         <img class="fotos" src="./img/THRILLER/PELICULA/dune.jpg" alt="Dune">
-
                     </div>
 
                 </article>
@@ -158,36 +157,43 @@
                 <article>
                     <h3>Series populares</h3> 
                     <div class ="portada">
-                        <!--Elegir serie-->
-                    </div>
-                </article>
-                
+                         </article>
+                         <img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg" alt="Black mirror">
+                        <img class="fotos" src="./img/THRILLER/SERIE/succession.jpg" alt=" Succession">
+                        <img class="fotos" src="./img/THRILLER/SERIE/greys.png" alt="Greys Anatomy">
                 <article>
                     <h3> Lo más visto en series</h3>
                     <div class ="portada">
-                        <!--Elegir serie-->
-                    </div>
+                        <img class="fotos" src="./img/THRILLER/SERIE/dark.jpg" alt="Dark">
+                        <img class="fotos" src="./img/THRILLER/SERIE/GoT.jpg" alt=" GOT">
+                        <img class="fotos" src="./img/THRILLER/SERIE/vickings.jpg" alt="Vickings">
+                                   </div>
                 </article>
 
                 <article>
                     <h3> Lo más visto en películas</h3>
                     <div class ="portada"> 
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/THRILLER/PELICULA/schindler.jpg" alt="Schindler">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/4VpOdGYKHtBz2vYJdSchvOSSDE9.jpg" alt="Parasite">
+                                        </div>
                 </article>
 
                 <article>  
                     <h3> Películas más valoradas</h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/THRILLER/PELICULA/whiplash.jpg" alt="wiplash">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/social network.jpg" alt="Social network">
+                        <img class="fotos" src="./img/THRILLER/PELICULA/tonya.jpg" alt="Tonya">
+                                        </div>
                 </article>  
 
                 <article>
                     <h3> Series más valoradas </h3>
                     <div class ="portada">
-                        <!--Elegir pelicula-->
-                    </div>
+                        <img class="fotos" src="./img/THRILLER/SERIE/suits.jpg" alt="Suits">
+    
+                                                    </div>
                 </article>
             </section>
         </main>
