--- a/index.html
+++ b/index.html
@@ -191,8 +191,10 @@
                 <article>
                     <h3> Series más valoradas </h3>
                     <div class ="portada">
-                        <img class="fotos" src="./img/THRILLER/SERIE/suits.jpg" alt="Suits">
-    
+                        <img class="fotos" src="./img/THRILLER/SERIE/MV5BMTI1MTAwZmMtMmZkOS00OGI3LWJhYTQtNzE3ZTBkOGY2NjA5XkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_.jpg" alt="Jack Ryan">
+                        <img class="fotos" src="./img/THRILLER/SERIE/MV5BZTZiODlmYmQtOGRhYS00ZmFlLTk5YzYtMDJmODU5NjUyMTk3XkEyXkFqcGdeQXVyNjEwNTM2Mzc@._V1_FMjpg_UX1000_.jpg" alt="Hijack">
+                        <img class="fotos" src="./img/THRILLER/SERIE/OIP (25).jpeg" alt="How to get away">
+
                                                     </div>
                 </article>
             </section>
