--- a/detail-movie.html
+++ b/detail-movie.html
@@ -21,6 +21,49 @@
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
             </nav>
         </header>
+        <main class="main_detalles">
+            <section class="sct_detail_rom">
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="diario"><h3>The Notebook</h3></a>
+                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/ROMANCE/PELICULAS/diario de una pasion.jpg" alt="Diario de una pasión">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+                            <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="dtl_pelicula">
+                        <h3>La La Land</h3>
+                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+                            <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="paris"><h3>Midnight in Paris</h3></a>
+                        <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
+                        <div class="info"> <!--Agregar nbr a la clase-->
+                            <img class="fotos" src="./img/ROMANCE/PELICULAS/midnight in paris.jpg" alt="Midnight in Paris">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+                            <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
+                        </div>
+                    </div>
+                </article>
+            </section>
+            <section class="sct_detail_thrll">
+
+            </section>
+            <section class="sct_detail_flia">
+
+            </section>
+        </main>
 
         <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
