--- a/detail-movie.html
+++ b/detail-movie.html
@@ -249,11 +249,11 @@
             <section class="sct_detail_thr">
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="noah"><h3>The Notebook</h3></a>
+                        <a name="inter"><h3>Interestellar</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/diario de una pasion.jpg" alt="Diario de una pasión">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/BjJcYdEOI0k?si=wGsci-DNiQGU4pZY&amp;controls=0&amp;start=3" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -261,11 +261,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="seb"><h3>La La Land</h3></a>
+                        <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -273,11 +273,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="paris"><h3>Midnight in Paris</h3></a>
+                        <a name="dune"><h3>Dune</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/midnight in paris.jpg" alt="midnight in paris">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/FAfR8omt-CY?si=5FbMrY5VjNCRqSWf" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/dune.jpg" alt="Dune">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/8g18jFHCLXk?si=IwQuOGhA2Ez2ZQX5&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -285,10 +285,10 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="darcy"><h3>Pride and Prejudice</h3></a>
+                        <a name="shindler"><h3>Shindler´s List</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg">
+                            <img class="fotos" src="./img/THRILLER/PELICULA/schindler.jpg" alt="Schindler">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Ur_DIHs92NM?si=L7CsaFmYF6dzkMb8" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
@@ -297,11 +297,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="match"><h3>The Perfect Match</h3></a>
+                        <a name="12años"><h3>12 years of slavery</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/perfect match.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/lf4GJAY4n1I?si=Bj8kWKCp6do8PDE9" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/z02Ie8wKKRg?si=G09StH_W7Qcwu8Bz&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -309,11 +309,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="charlie"><h3>Set it Up</h3></a>
+                        <a name="parasite"><h3>Parasite</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/set it up.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/eM6l2-DeZ4c?si=GBZwFcDHejAjG_kM" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/4VpOdGYKHtBz2vYJdSchvOSSDE9.jpg" alt="Parasite">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/SEUXfv87Wpk?si=KkBoh8S9VgCx1ic_&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -321,11 +321,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="marriage"><h3>Scenes from a Marriage</h3></a>
+                        <a name="whip"><h3>Whiplash</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/scenes from a marriage.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/mRuVWHnQlV8?si=3ePqM4BnKfbrmIxM" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/whiplash.jpg" alt="whiplash">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/7d_jQycdQGo?si=ObE8zyOGQJryvGOB&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -333,11 +333,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="grey"><h3>Fifty Shadows of Grey</h3></a>
+                        <a name="socialnet"><h3>The Social Network</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (12).jpeg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/SfZWFDs0LxA?si=Nqb-5e35IZDyngdm" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/social network.jpg" alt="Social network">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/lB95KLmpLR4?si=1xQ-QubtHTGnYPOm&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
@@ -345,11 +345,11 @@
 
                 <article>
                     <div class="dtl_pelicula">
-                        <a name="happy"><h3>Happy Ending</h3></a>
+                        <a name="tonya"><h3>I,Tonya</h3></a>
                         <p>Calificacion: | "duracion" | estreno | genero | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
-                            <img class="fotos" src="./img/ROMANCE/PELICULAS/OIP (8).jpeg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/iyLkbTBrXSg?si=pOMaE9vjxDKoQTBi" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <img class="fotos" src="./img/THRILLER/PELICULA/tonya.jpg" alt="Tonya">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/OXZQ5DfSAAc?si=UNirbMzybTgNX1PP&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur distinctio delectus et, error aspernatur temporibus? Iure obcaecati praesentium quod facere deleniti, et hic numquam, quidem ea vitae qui, maiores facilis.</p>
                         </div>
                     </div>
