--- a/genre.html
+++ b/genre.html
@@ -7,6 +7,7 @@
         <title>Generos</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="./img/LOGO/PngItem_5147565.png">
     </head>
 
     <body>
